syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.peng.gprc_hook_in.restaurant";
option java_outer_classname = "RestaurantProto";
option objc_class_prefix = "HLW";

package proto;
import "common.proto";
import "order.proto";

message CollectMealRequest {
    Driver driver = 1;
    OrderRequest orderRequest = 2;
}

service RestaurantService {
    rpc CookMeal (OrderRequest) returns (ResultResponse);
    rpc CollectMeal (CollectMealRequest) returns (ResultResponse);
}