syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.peng.gprc_hook_in.order";
option java_outer_classname = "OrderProto";
option objc_class_prefix = "HLW";

package proto;
import "common.proto";

message OrderRequest {
    string name = 1;
    optional string surname = 2;
    string address = 3;
    string meal = 4;
}

service OrderService {
    rpc OrderMeal (OrderRequest) returns (ResultResponse);
}